--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name":"CraftifyFrontend",
+  "name": "CraftifyFrontend",
   "version": "0.1.0",
   "author": "Aditya Pachauri",
   "private": true,
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-style-tag": "^3.0.1",
     "react-toastify": "^10.0.6",
+    "tailwind": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
